--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -2,18 +2,26 @@
   header {
     padding: 26px;
     border-bottom: 1px solid #e2e2e2;
-  }
 
-  .content {
-    max-width: 1120px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    .content {
+      max-width: 1120px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      > img {
+        max-height: 45px;
+      }
 
-  > img {
-    max-height: 45px;
+      > div {
+        display: flex;
+        gap: 16px;
+
+        > button {
+          height: 40px;
+        }
+      }
+    }
   }
 }
 
@@ -95,5 +103,9 @@ main {
         }
       }
     }
+  }
+
+  .question-list {
+    margin-top: 32px;
   }
 }
